@@ -92,6 +92,7 @@
   </bean>
 
   <bean id="rssController" class="org.sventon.web.ctrl.RSSController" parent="abstractBaseController">
+    <property name="commandClass" value="org.sventon.web.command.RevisionRangeCommand"/>
     <property name="mimeType" value="application/xml; charset=UTF-8"/>
     <property name="rssFeedGenerator" ref="rssFeedGenerator"/>
     <property name="httpAuthenticationHandler" ref="httpAuthenticationHandler"/>
@@ -155,7 +156,7 @@
   </bean>
 
   <bean id="showLogsController" class="org.sventon.web.ctrl.template.ShowLogController" parent="abstractTemplateController">
-    <property name="commandClass" value="org.sventon.web.command.MultipleEntriesCommand"/>
+    <property name="commandClass" value="org.sventon.web.command.LogCommand"/>
     <property name="pageSize" ref="logsPerPageCount"/>
     <property name="viewName" value="showLog"/>
   </bean>
