@@ -1,5 +1,7 @@
 sventon change history
 -----------------------------------------------------------------------------------------
+
+[2002] Added: Feature #5343 - Toggleable paging in logs view.
 [2001] Fixed: Bug #17851 - NPE during browse of repository.
 [2000] Fixed: Bug #17852 - Does not work out-of-the-box on Jetty due to JSTL issue.
 
